--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,13 +4,28 @@ on:
     branches:
       - main
   pull_request:
+
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.7
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build
+        run: pnpm build
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
@@ -43,17 +58,17 @@ jobs:
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
-            
+
             <details><summary>Show Plan</summary>
-            
+
             \`\`\`\n
             ${process.env.PLAN}
             \`\`\`
-            
+
             </details>
-            
+
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -68,3 +83,19 @@ jobs:
         run: terraform apply -auto-approve -input=false
         env:
           TF_WORKSPACE: production
+      - name: Prepare and Zip .mjs files
+        run: |
+          mkdir dist
+          mv "import-from-s3/index.mjs" "dist/index.mjs"
+          (cd dist && zip "import-from-s3.zip" "index.mjs")
+          rm "dist/index.mjs"
+      - name: Publish on S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          SOURCE_DIR: 'dist'
+          DEST_DIR: 'utilities'
